Fix scrollbar in firefox browser

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -49,6 +49,7 @@ html, body, #root {
     font-family: var(--global-font);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scrollbar-color: var(--avocado-color) rgba(0, 0, 0, .23);
 }
 
 header {
@@ -169,7 +170,7 @@ p {
     display: block;
     width: 90%;
     overflow-x: auto;
-    font-size: min(max(1rem, calc(.5rem + 1vw)), 20px);
+    font-size: min(max(1rem, calc(.5rem + 1vw)), 20px);  
 }
 
 .article-h1 {
